[project]
name = "literature-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asreview>=1.1.1",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "scholar-flux>=0.6.0",
    "scikit-learn>=1.9.0",
    "setuptools==80.9.0",
]
